# xtc-rs

./: .gitignore  Cargo.toml  README.md  test.csv  test.xlsx
.github/workflows/: ci.yml
src/: lib.rs  main.rs
