[package]
name = "xtc"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"